--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://William-0320: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@github.com/comp426-2022-spring/a01-William-0320.git"
   },
   "author": "William Li",
-  "license": "ISC",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/comp426-2022-spring/a01-William-0320/issues"
   },
