--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "a01-william-0320",
   "version": "1.0.0",
-  "description": "a01",
-  "main": "index.js",
+  "description": "This package contains a very simple web server that takes one argument for port and then serves index.html in the www directory.",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +11,7 @@
     "url": "git+https://William-0320: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@github.com/comp426-2022-spring/a01-William-0320.git"
   },
   "author": "William Li",
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/comp426-2022-spring/a01-William-0320/issues"
   },
