--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "a01-william-0320",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "This package contains a very simple web server that takes one argument for port and then serves index.html in the www directory.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node server.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
